Create findAll endpoint along with tests